--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/portfolio.min.css">
+  <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
 </head>
 
 <body>
